chore: upgrade to yarn 1.22.5

--- a/.yarnrc
+++ b/.yarnrc
@@ -2,5 +2,8 @@
 # yarn lockfile v1
 
 
-lastUpdateCheck 1553377279244
-yarn-path ".yarn/releases/yarn-1.15.2.js"
+email kate@agoric.com
+lastUpdateCheck 1612479065971
+username katesills
+version-git-tag false
+yarn-path ".yarn/releases/yarn-1.22.5.js"
